# fdsn-fetch

./: .pre-commit-config.yaml  pyproject.toml
src/fdsn_download/: app.py  client.py  convert.py  manager.py  remote_log.py  stats.py  utils.py  writer.py
src/fdsn_download/models/: station.py
src/sdscopy/: app.py  client.py  manager.py  stats.py  writer.py
src/sdscopy/models/: station.py
tests/: test_client.py  test_manager.py  test_station.py
